@@ -11,7 +11,7 @@
 
   <groupId>org.gbif.registry</groupId>
   <artifactId>registry-parent</artifactId>
-  <version>4.0.16-SNAPSHOT</version>
+  <version>4.1.0-SNAPSHOT</version>
   <name>GBIF Registry Parent</name>
   <description>GBIF Registry project</description>
 
@@ -90,18 +90,19 @@
     <!-- GBIF -->
     <gbif-api.version>2.1.2</gbif-api.version>
     <gbif-common.version>0.59</gbif-common.version>
-    <gbif-common-mybatis.version>2.0.0</gbif-common-mybatis.version>
+    <gbif-common-mybatis.version>2.0.1-SNAPSHOT</gbif-common-mybatis.version>
     <gbif-common-ws.version>2.0.7</gbif-common-ws.version>
-    <gbif-directory.version>1.13</gbif-directory.version>
+    <gbif-directory.version>1.14</gbif-directory.version>
     <gbif-doi.version>3.0.0</gbif-doi.version>
-    <gbif-download-query-tools.version>2.0.0</gbif-download-query-tools.version>
+    <gbif-download-query-tools.version>2.1.0-java11-SNAPSHOT</gbif-download-query-tools.version>
     <gbif-httputils.version>0.10</gbif-httputils.version>
     <gbif-metadata-profile.version>2.6</gbif-metadata-profile.version>
     <gbif-parsers.version>0.67</gbif-parsers.version>
     <gbif-postal-service.version>1.8.1</gbif-postal-service.version>
     <xoai.version>4.1.0-gbif-4</xoai.version>
-    <gbif-occurrence.version>1.0.28</gbif-occurrence.version>
+    <gbif-occurrence.version>1.1.0-SNAPSHOT</gbif-occurrence.version>
     <gbif-vocabulary.version>2.0.2</gbif-vocabulary.version>
+    <gbif-kvs.version>3.0-SNAPSHOT</gbif-kvs.version>
     <checklistbank.version>3.0.0</checklistbank.version>
 
     <!-- Third party -->
@@ -146,8 +147,8 @@
     <junit.version>5.9.1</junit.version>
     <mockito.version>3.3.3</mockito.version>
     <xmlunit.version>2.6.3</xmlunit.version>
-    <postgresql-testcontainers.version>1.19.8</postgresql-testcontainers.version>
-    <testcontainers-elasticsearch.version>1.19.8</testcontainers-elasticsearch.version>
+    <postgresql-testcontainers.version>1.20.2</postgresql-testcontainers.version>
+    <testcontainers-elasticsearch.version>1.20.2</testcontainers-elasticsearch.version>
     <mock-javamail.version>1.9</mock-javamail.version>
     <mybatis-spring-boot-starter-test.version>2.0.0</mybatis-spring-boot-starter-test.version>
     <reflections.version>0.9.12</reflections.version>
@@ -432,6 +433,11 @@
         <groupId>org.gbif.vocabulary</groupId>
         <artifactId>vocabulary-rest-ws-client</artifactId>
         <version>${gbif-vocabulary.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.gbif.kvs</groupId>
+        <artifactId>kvs-rest-clients</artifactId>
+        <version>${gbif-kvs.version}</version>
       </dependency>
 
       <!-- Third party dependencies -->
@@ -804,30 +810,6 @@
         <artifactId>spotless-maven-plugin</artifactId>
         <version>${spotless-maven-plugin.version}</version>
       </plugin>
-
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>${maven-surefire-plugin.version}</version>
-        <configuration>
-          <argLine>--add-opens=java.base/java.lang.invoke=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED</argLine>
-        </configuration>
-      </plugin>
-
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-failsafe-plugin</artifactId>
-        <version>${maven-failsafe-plugin.version}</version>
-        <configuration>
-          <argLine>--add-opens=java.base/java.lang.invoke=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED</argLine>
-        </configuration>
-      </plugin>
-
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-release-plugin</artifactId>
-        <version>${maven-release-plugin.version}</version>
-      </plugin>
     </plugins>
 
     <pluginManagement>
@@ -836,9 +818,6 @@
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-maven-plugin</artifactId>
           <version>${spring-boot-maven-plugin.version}</version>
-          <configuration>
-            <jvmArguments>--add-opens=java.base/java.lang.invoke=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED</jvmArguments>
-          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
